# bk-lite

./: .gitignore  LICENSE.txt  Makefile  Readme.md  readme_en.md
agents/fusion-collector/: .gitignore
agents/nats-executor/: .gitignore  go.mod  main.go
agents/stargazer/: .env.example  Makefile  requirements.txt  server.py
deploy/docker-compose/: 01.prepare.sh  02.traefik.sh  03.redis.sh  04.nats.sh  05.victoria-metrics.sh  06.postgres.sh  07.keycloak.sh  08.system-manager.sh  09.system-manager-web.sh  10.node-manager.sh  12.monitor.sh  (+6 more)
fusion-collector/: .gitignore  Dockerfile  startup.sh
mcp/: .env  Makefile
metis/: .env.example  .gitignore  Makefile  Readme.md  VERSION.md  config.yml  pytest.ini  server.py
pilot/: .gitignore  Dockerfile  Makefile  cli.py  credentials.yml  endpoints.yml  pyproject.toml
pilot/actions/: action_llm_fallback.py
pilot/channels/: dingtalk_channel.py  enterprise_wechat_channel.py  wechat_official_account_channel.py
pilot/core/: server_settings.py
pilot/custom_broker/: rabbitmq_broker.py
pilot/data/basic/: config.yml
pilot/data/basic/data/: domain.yml  nlu.yml  responses.yml  rules.yml
pilot/eventbus/: base_eventbus.py
pilot/requirements/: requirements-dev.in  requirements.in
pilot/utils/: munchkin_driver.py
server/: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  asgi.py  manage.py  settings.py  urls.py
web/: .env.example  .eslintrc.json  .gitignore  .npmrc  Dockerfile  next-auth.d.ts  next.config.mjs  package.json  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
(+1783 files in other folders)
